<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/person_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/image_running_person" />

    <TextView
        android:id="@+id/login_title_tv"
        style="@style/TextAppearance.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_40"
        android:layout_marginBottom="@dimen/padding_40"
        android:text="@string/login_title"
        android:textSize="@dimen/text_size_36"
        app:layout_constraintBottom_toTopOf="@id/input_layout_email"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/login_subtitle_tv"
        style="@style/TextAppearance.Default"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_40"
        android:text="@string/login_subtitle"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toBottomOf="@id/login_title_tv"
        app:layout_constraintLeft_toRightOf="@id/login_title_tv"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white_85"
        android:textColorHint="@color/gray_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/login_title_tv"
        app:layout_constraintRight_toRightOf="@id/login_subtitle_tv"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/email_et"
            style="@style/Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_height"

        app:layout_constraintLeft_toLeftOf="@id/input_layout_email"
        app:layout_constraintRight_toRightOf="@id/input_layout_email"
        app:layout_constraintTop_toBottomOf="@id/input_layout_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password"
        style="@style/InputPasswordHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#D9FFFFFF"
        app:layout_constraintLeft_toLeftOf="@id/login_title_tv"
        app:layout_constraintRight_toRightOf="@id/login_subtitle_tv"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <EditText
            android:id="@+id/password_et"
            style="@style/Input.Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/remember_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/input_layout_password"
        app:layout_constraintTop_toBottomOf="@id/input_layout_password" />

    <TextView
        android:id="@+id/remember_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:textAlignment="textEnd"
        android:textColor="@color/dark_main_color"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintBottom_toBottomOf="@id/remember_checkbox"
        app:layout_constraintLeft_toRightOf="@id/remember_checkbox"
        app:layout_constraintTop_toTopOf="@id/remember_checkbox" />

    <TextView
        android:id="@+id/forgot_password_tv"
        style="@style/TrainingJournalTheme.TextShadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_5"
        android:text="@string/forgot_password"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintRight_toRightOf="@id/input_layout_password"
        app:layout_constraintTop_toBottomOf="@id/remember_checkbox" />

    <Button
        android:id="@+id/confirm_button"
        style="@style/RoundedCornerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:text="@string/login"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/login_title_tv"
        app:layout_constraintRight_toRightOf="@id/login_subtitle_tv"
        app:layout_constraintTop_toBottomOf="@id/input_layout_password" />

    <TextView
        android:id="@+id/not_exist_acc_tv"
        style="@style/TrainingJournalTheme.TextShadow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_5"
        android:text="@string/not_exist_acc"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintLeft_toLeftOf="@id/confirm_button"
        app:layout_constraintRight_toRightOf="@id/confirm_button"
        app:layout_constraintTop_toBottomOf="@id/confirm_button" />

</androidx.constraintlayout.widget.ConstraintLayout>