<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimens_8dp">

    <EditText
        android:id="@+id/workout_name"
        style="@style/Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_16dp"
        android:hint="@string/enter_workout_name"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_exercise_text"
        style="@style/TextViewExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/exercise_elements"
        android:textSize="@dimen/text_size_25"
        app:layout_constraintBottom_toBottomOf="@id/add_exercise_button"
        app:layout_constraintEnd_toStartOf="@id/add_exercise_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/add_exercise_button" />

    <Button
        android:id="@+id/add_exercise_button"
        style="@style/RoundedCornerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_16dp"
        android:paddingHorizontal="@dimen/dimens_8dp"
        android:text="@string/action_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_exercise_text"
        app:layout_constraintTop_toBottomOf="@id/workout_name" />

    <Button
        android:id="@+id/save"
        style="@style/RoundedCornerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/dimens_8dp"
        android:layout_marginTop="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_8dp"
        android:text="@string/save"
        app:layout_constraintEnd_toStartOf="@id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_exercise_button" />

    <Button
        android:id="@+id/cancel"
        style="@style/RoundedCornerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/dimens_8dp"
        android:layout_marginTop="@dimen/dimens_16dp"
        android:layout_marginBottom="@dimen/dimens_8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/save"
        app:layout_constraintTop_toBottomOf="@id/add_exercise_button" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/shadow"
        android:background="@drawable/shadow"
        app:layout_constraintBottom_toTopOf="@id/elements_list"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/elements_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimens_16dp"
        app:layout_constraintTop_toBottomOf="@id/save" />

</androidx.constraintlayout.widget.ConstraintLayout>