<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:textSize="@dimen/dim_35sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/exercise"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/exercise_name"
        app:layout_constraintVertical_weight="10"
        />

    <EditText
        android:id="@+id/exercise_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="text"
        style="@style/Input"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/type_text_view"
        app:layout_constraintVertical_weight="10"
        android:hint="@string/enter_exercise_name" />

    <TextView
        android:id="@+id/type_text_view"
        android:text="@string/exercise_type"
        android:layout_height="0dp"
        android:layout_width="0dp"
        style="@style/TextViewExercise"
        app:layout_constraintTop_toBottomOf="@id/exercise_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_exercise_back_button"
        app:layout_constraintBottom_toTopOf="@id/add_exercise_text"
        android:gravity="center"
        android:paddingEnd="@dimen/dimens_16dp"
        android:paddingStart="@dimen/dimens_16dp"
        app:layout_constraintVertical_weight="10"
        app:layout_constraintHorizontal_weight="50"
        />
    <Spinner
        android:id="@+id/add_exercise_back_button"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:entries="@array/exercise_types"
        app:layout_constraintTop_toTopOf="@id/type_text_view"
        app:layout_constraintBottom_toBottomOf="@id/type_text_view"
        app:layout_constraintStart_toEndOf="@id/type_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_weight="10"
        app:layout_constraintHorizontal_weight="50"
        />

    <TextView
        android:id="@+id/add_exercise_text"
        android:text="@string/exercise_elements"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/TextViewExercise"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/type_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_exercise_button"
        app:layout_constraintBottom_toTopOf="@id/elements_list"
        app:layout_constraintHorizontal_weight="80"
        app:layout_constraintVertical_weight="10"
        />

    <ImageButton
        android:id="@+id/add_exercise_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_add_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/type_text_view"
        app:layout_constraintBottom_toBottomOf="@id/add_exercise_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_exercise_text"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_weight="20"
        app:layout_constraintVertical_weight="10"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/elements_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/add_exercise_text"
        app:layout_constraintBottom_toTopOf="@id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_weight="40"
        />

    <Button
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:layout_height="0dp"
        android:layout_width="0dp"
        style="@style/TextViewExercise"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/elements_list"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="10"
        android:layout_margin="@dimen/dimens_8dp"
        />
    <Button
        android:id="@+id/save"
        android:text="@string/save"
        android:layout_height="0dp"
        android:layout_width="0dp"
        style="@style/TextViewExercise"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/elements_list"
        app:layout_constraintStart_toEndOf="@id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="10"
        android:layout_margin="@dimen/dimens_8dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>